<resources>
    <string name="app_name">GradeCalulator</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="Login">Login</string>
    <string name="Register">Register</string>
    <string name="Remember_me">Remember Me</string>
    <string name="Bachelor_degree">Bachelor Degree</string>
    <string name="Master_degree">Master Degree</string>
    <string name="Add_Subject">Add Subject</string>
    <string name="Add_Grade">Add Grade</string>
    <string name="Subject">Subject</string>
    <string name="Grade">Grade</string>
    <string name="Remove">Remove</string>
    <string name="Current_Grade">Current Grade:</string>
    <string name="ADD">ADD</string>
    <string name="text_collapsed">Collapsed</string>
    <string name="Hello">Hello,</string>
    <string name="Subject_list">Subject List</string>
    <string name="Grade_Calculator">Grade Calculator</string>
    <string name="Logout">Logout</string>
    <string name="cpass">Comfirm Password</string>
    <string name="text_y1t1">Year:1st   Semester: 1st</string>
    <string name="text_y1t2">Year:1st   Semester: 2nd</string>
    <string name="text_y2t1">Year:2nd   Semester: 1st</string>
    <string name="text_y2t2">Year:2nd   Semester: 2nd</string>
    <string name="text_y3t1">Year:3rd   Semester: 1st</string>
    <string name="text_y3t2">Year:3rd   Semester: 2nd</string>
    <string name="text_y4t1">Year:4th   Semester: 1st</string>
    <string name="text_y4t2">Year:4th   Semester: 2nd</string>
    <string name="Sem1">1st Semester</string>
    <string name="Sem2">2nd Semester</string>
    <string name="Sem3">3rd Semester</string>
    <string name="elective">Elective Courses</string>
    <string name="program">Program</string>
    <string-array name="master_subject">
        <item>ITCY511 Computer and Network Security (3)</item>
        <item>ITCY541 Digital Forensics Technologies and Techniques (3)</item>
        <item>ITCY513 Cyber Ethics and Law (2)</item>
        <item>ITCY512 Information Security Management (3)</item>
        <item>ITCY515 Research Methodology and Seminar in Cybersecurity and Information Assurance (1)</item>
        <item>ITCY531 System Hardening and Penetration Testing (3)</item>
        <item>ITCY571 Information Assurance and Risk Analysis (3)</item>
        <item>ITCY698 Thesis (3)</item>
        <item>ITCY698 Thesis (9)</item>
        <item>ITCY697 Research Project (6)</item>
        <item>ITCY514 Fraud Analysis and Detection (3)</item>
        <item>ITCY534 Reverse Engineering and Vulnerability Analysis (3)</item>
        <item>ITCY543 Network Forensics (3)</item>
        <item>ITCY544 Mobile Security (3)</item>
        <item>ITCY545 Cloud Security (3)</item>
        <item>ITCY561 Ethical Hacking (3)</item>
        <item>ITCY562 Intrusion Detection and Prevention (3)</item>
        <item>ITCY591 Special Topics in Cyber Security and Forensics (3)</item>
        <item>ITCY551 Application of Cryptography (3)</item>
        <item>ITCY552 Authentication Technology Management (3)</item>
        <item>ITCY553 Secure Software Design (3)</item>
        <item>ITCY572 Information and Social Networks Security (3)</item>
        <item>ITCY573 E-Services Security Management (3)</item>
        <item>ITCY581 Incident Response Management (3)</item>
        <item>ITCY592 Special Topics in Information Assurance (3)</item>
    </string-array>
    <string-array name="Grade_List">
        <item>A</item>
        <item>B+</item>
        <item>B</item>
        <item>C+</item>
        <item>C</item>
        <item>D+</item>
        <item>D</item>
        <item>F</item>
    </string-array>
    <string name="Firstname">First name</string>
    <string name="Lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="text_password">Password</string>
    <string name="phoneno">Phone number</string>
    <string name="back">Back</string>
</resources>