<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Master_Grade_Cal">

    <LinearLayout
        android:id="@+id/degree"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gpa"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Degree"
            android:layout_width="166dp"
            android:layout_height="35dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/Master_degree"
            android:textSize="24sp"
            app:layout_constraintTop_toBottomOf="@+id/Cur"
            tools:layout_editor_absoluteX="28dp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="200dp"
            android:layout_height="1dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.47"
            app:layout_constraintStart_toEndOf="@+id/Degree"
            app:layout_constraintTop_toBottomOf="@+id/Cur" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/gpa"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/Cur"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="44dp"
            android:layout_marginTop="20dp"
            android:text="@string/Current_Grade"
            android:textSize="30sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/Curr_GPA_Num"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:textSize="30sp"
            app:layout_constraintBottom_toTopOf="@+id/textView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.137"
            app:layout_constraintStart_toEndOf="@+id/Cur"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="395dp"
        android:layout_height="300dp"
        android:layout_below="@+id/Add_group"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="232dp">

        <LinearLayout
            android:id="@+id/head"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/SCG"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@android:color/holo_blue_light"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/Subject"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:text="@string/Subject"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/Grade"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/Grade"
                    android:textAlignment="center" />

            </LinearLayout>

            <TextView
                android:id="@+id/add_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/Add_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/degree"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/add_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/subject"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="36dp"
                    android:text="@string/Add_Subject"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="172dp" />

                <Spinner
                    android:id="@+id/spinner_Subject"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="130dp"
                    tools:layout_editor_absoluteY="167dp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/Add_Grade"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="44dp"
                    android:text="@string/Add_Grade"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:layout_editor_absoluteY="200dp" />

                <Spinner
                    android:id="@+id/spinner_Grade"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    tools:layout_editor_absoluteX="130dp"
                    tools:layout_editor_absoluteY="200dp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <Button
                android:id="@+id/add_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/ADD"
                tools:layout_editor_absoluteX="290dp"
                tools:layout_editor_absoluteY="172dp" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/scrollView2"
        android:gravity="clip_horizontal|center_horizontal"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Remove_button"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/Remove" />

    </LinearLayout>


</RelativeLayout>
